feat: Create API endpoint to see if Flagger is installed on any of the clusters
Closes #901
