# pkg/api/prog/prog.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.27.1
+// 	protoc-gen-go v1.28.0
 // 	protoc        (unknown)
 // source: api/prog/prog.proto
 
@@ -343,6 +343,91 @@ func (x *GetCanaryResponse) GetAutomation() *Automation {
 	return nil
 }
 
+type IsFlaggerAvailableRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *IsFlaggerAvailableRequest) Reset() {
+	*x = IsFlaggerAvailableRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_prog_prog_proto_msgTypes[6]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *IsFlaggerAvailableRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*IsFlaggerAvailableRequest) ProtoMessage() {}
+
+func (x *IsFlaggerAvailableRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_prog_prog_proto_msgTypes[6]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use IsFlaggerAvailableRequest.ProtoReflect.Descriptor instead.
+func (*IsFlaggerAvailableRequest) Descriptor() ([]byte, []int) {
+	return file_api_prog_prog_proto_rawDescGZIP(), []int{6}
+}
+
+type IsFlaggerAvailableResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Clusters map[string]bool `protobuf:"bytes,1,rep,name=clusters,proto3" json:"clusters,omitempty" protobuf_key:"bytes,1,opt,name=key,proto3" protobuf_val:"varint,2,opt,name=value,proto3"`
+}
+
+func (x *IsFlaggerAvailableResponse) Reset() {
+	*x = IsFlaggerAvailableResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_prog_prog_proto_msgTypes[7]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *IsFlaggerAvailableResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*IsFlaggerAvailableResponse) ProtoMessage() {}
+
+func (x *IsFlaggerAvailableResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_prog_prog_proto_msgTypes[7]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use IsFlaggerAvailableResponse.ProtoReflect.Descriptor instead.
+func (*IsFlaggerAvailableResponse) Descriptor() ([]byte, []int) {
+	return file_api_prog_prog_proto_rawDescGZIP(), []int{7}
+}
+
+func (x *IsFlaggerAvailableResponse) GetClusters() map[string]bool {
+	if x != nil {
+		return x.Clusters
+	}
+	return nil
+}
+
 var File_api_prog_prog_proto protoreflect.FileDescriptor
 
 var file_api_prog_prog_proto_rawDesc = []byte{
@@ -385,7 +470,19 @@ var file_api_prog_prog_proto_rawDesc = []byte{
 	0x61, 0x6e, 0x61, 0x72, 0x79, 0x52, 0x06, 0x63, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x12, 0x2b, 0x0a,
 	0x0a, 0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x18, 0x02, 0x20, 0x01, 0x28,
 	0x0b, 0x32, 0x0b, 0x2e, 0x41, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x0a,
-	0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x32, 0x8c, 0x02, 0x0a, 0x1a, 0x50,
+	0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x22, 0x1b, 0x0a, 0x19, 0x49, 0x73,
+	0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0xa0, 0x01, 0x0a, 0x1a, 0x49, 0x73, 0x46, 0x6c,
+	0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x52, 0x65,
+	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x45, 0x0a, 0x08, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65,
+	0x72, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x29, 0x2e, 0x49, 0x73, 0x46, 0x6c, 0x61,
+	0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x2e, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x45, 0x6e,
+	0x74, 0x72, 0x79, 0x52, 0x08, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x1a, 0x3b, 0x0a,
+	0x0d, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x12, 0x10,
+	0x0a, 0x03, 0x6b, 0x65, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79,
+	0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x08, 0x52,
+	0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x3a, 0x02, 0x38, 0x01, 0x32, 0xf4, 0x02, 0x0a, 0x1a, 0x50,
 	0x72, 0x6f, 0x67, 0x72, 0x65, 0x73, 0x73, 0x69, 0x76, 0x65, 0x44, 0x65, 0x6c, 0x69, 0x76, 0x65,
 	0x72, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x4a, 0x0a, 0x0a, 0x47, 0x65, 0x74,
 	0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x12, 0x12, 0x2e, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72,
@@ -402,11 +499,17 @@ var file_api_prog_prog_proto_rawDesc = []byte{
 	0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x12, 0x2e, 0x47, 0x65, 0x74, 0x43, 0x61,
 	0x6e, 0x61, 0x72, 0x79, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1b, 0x82, 0xd3,
 	0xe4, 0x93, 0x02, 0x15, 0x12, 0x13, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x61, 0x6e, 0x61, 0x72, 0x69,
-	0x65, 0x73, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x42, 0x30, 0x5a, 0x2e, 0x67, 0x69, 0x74,
-	0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x77, 0x65, 0x61, 0x76, 0x65, 0x77, 0x6f, 0x72,
-	0x6b, 0x73, 0x2f, 0x70, 0x72, 0x6f, 0x67, 0x72, 0x65, 0x73, 0x73, 0x69, 0x76, 0x65, 0x2d, 0x64,
-	0x65, 0x6c, 0x69, 0x76, 0x65, 0x72, 0x79, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x33,
+	0x65, 0x73, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x12, 0x66, 0x0a, 0x12, 0x49, 0x73, 0x46,
+	0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x12,
+	0x1a, 0x2e, 0x49, 0x73, 0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c,
+	0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e, 0x49, 0x73,
+	0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x17, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11,
+	0x12, 0x0f, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x72, 0x64, 0x2f, 0x66, 0x6c, 0x61, 0x67, 0x67, 0x65,
+	0x72, 0x42, 0x30, 0x5a, 0x2e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f,
+	0x77, 0x65, 0x61, 0x76, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x73, 0x2f, 0x70, 0x72, 0x6f, 0x67, 0x72,
+	0x65, 0x73, 0x73, 0x69, 0x76, 0x65, 0x2d, 0x64, 0x65, 0x6c, 0x69, 0x76, 0x65, 0x72, 0x79, 0x2f,
+	0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -421,36 +524,42 @@ func file_api_prog_prog_proto_rawDescGZIP() []byte {
 	return file_api_prog_prog_proto_rawDescData
 }
 
-var file_api_prog_prog_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_api_prog_prog_proto_msgTypes = make([]protoimpl.MessageInfo, 9)
 var file_api_prog_prog_proto_goTypes = []interface{}{
-	(*GetVersionRequest)(nil),    // 0: GetVersionRequest
-	(*GetVersionResponse)(nil),   // 1: GetVersionResponse
-	(*ListCanariesRequest)(nil),  // 2: ListCanariesRequest
-	(*ListCanariesResponse)(nil), // 3: ListCanariesResponse
-	(*GetCanaryRequest)(nil),     // 4: GetCanaryRequest
-	(*GetCanaryResponse)(nil),    // 5: GetCanaryResponse
-	(*Pagination)(nil),           // 6: Pagination
-	(*Canary)(nil),               // 7: Canary
-	(*ListError)(nil),            // 8: ListError
-	(*Automation)(nil),           // 9: Automation
+	(*GetVersionRequest)(nil),          // 0: GetVersionRequest
+	(*GetVersionResponse)(nil),         // 1: GetVersionResponse
+	(*ListCanariesRequest)(nil),        // 2: ListCanariesRequest
+	(*ListCanariesResponse)(nil),       // 3: ListCanariesResponse
+	(*GetCanaryRequest)(nil),           // 4: GetCanaryRequest
+	(*GetCanaryResponse)(nil),          // 5: GetCanaryResponse
+	(*IsFlaggerAvailableRequest)(nil),  // 6: IsFlaggerAvailableRequest
+	(*IsFlaggerAvailableResponse)(nil), // 7: IsFlaggerAvailableResponse
+	nil,                                // 8: IsFlaggerAvailableResponse.ClustersEntry
+	(*Pagination)(nil),                 // 9: Pagination
+	(*Canary)(nil),                     // 10: Canary
+	(*ListError)(nil),                  // 11: ListError
+	(*Automation)(nil),                 // 12: Automation
 }
 var file_api_prog_prog_proto_depIdxs = []int32{
-	6, // 0: ListCanariesRequest.pagination:type_name -> Pagination
-	7, // 1: ListCanariesResponse.canaries:type_name -> Canary
-	8, // 2: ListCanariesResponse.errors:type_name -> ListError
-	7, // 3: GetCanaryResponse.canary:type_name -> Canary
-	9, // 4: GetCanaryResponse.automation:type_name -> Automation
-	0, // 5: ProgressiveDeliveryService.GetVersion:input_type -> GetVersionRequest
-	2, // 6: ProgressiveDeliveryService.ListCanaries:input_type -> ListCanariesRequest
-	4, // 7: ProgressiveDeliveryService.GetCanary:input_type -> GetCanaryRequest
-	1, // 8: ProgressiveDeliveryService.GetVersion:output_type -> GetVersionResponse
-	3, // 9: ProgressiveDeliveryService.ListCanaries:output_type -> ListCanariesResponse
-	5, // 10: ProgressiveDeliveryService.GetCanary:output_type -> GetCanaryResponse
-	8, // [8:11] is the sub-list for method output_type
-	5, // [5:8] is the sub-list for method input_type
-	5, // [5:5] is the sub-list for extension type_name
-	5, // [5:5] is the sub-list for extension extendee
-	0, // [0:5] is the sub-list for field type_name
+	9,  // 0: ListCanariesRequest.pagination:type_name -> Pagination
+	10, // 1: ListCanariesResponse.canaries:type_name -> Canary
+	11, // 2: ListCanariesResponse.errors:type_name -> ListError
+	10, // 3: GetCanaryResponse.canary:type_name -> Canary
+	12, // 4: GetCanaryResponse.automation:type_name -> Automation
+	8,  // 5: IsFlaggerAvailableResponse.clusters:type_name -> IsFlaggerAvailableResponse.ClustersEntry
+	0,  // 6: ProgressiveDeliveryService.GetVersion:input_type -> GetVersionRequest
+	2,  // 7: ProgressiveDeliveryService.ListCanaries:input_type -> ListCanariesRequest
+	4,  // 8: ProgressiveDeliveryService.GetCanary:input_type -> GetCanaryRequest
+	6,  // 9: ProgressiveDeliveryService.IsFlaggerAvailable:input_type -> IsFlaggerAvailableRequest
+	1,  // 10: ProgressiveDeliveryService.GetVersion:output_type -> GetVersionResponse
+	3,  // 11: ProgressiveDeliveryService.ListCanaries:output_type -> ListCanariesResponse
+	5,  // 12: ProgressiveDeliveryService.GetCanary:output_type -> GetCanaryResponse
+	7,  // 13: ProgressiveDeliveryService.IsFlaggerAvailable:output_type -> IsFlaggerAvailableResponse
+	10, // [10:14] is the sub-list for method output_type
+	6,  // [6:10] is the sub-list for method input_type
+	6,  // [6:6] is the sub-list for extension type_name
+	6,  // [6:6] is the sub-list for extension extendee
+	0,  // [0:6] is the sub-list for field type_name
 }
 
 func init() { file_api_prog_prog_proto_init() }
@@ -532,6 +641,30 @@ func file_api_prog_prog_proto_init() {
 				return nil
 			}
 		}
+		file_api_prog_prog_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*IsFlaggerAvailableRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_prog_prog_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*IsFlaggerAvailableResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -539,7 +672,7 @@ func file_api_prog_prog_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_prog_prog_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   9,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
