# pkg/api/prog/prog_grpc.pb.go
@@ -1,4 +1,8 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.2.0
+// - protoc             (unknown)
+// source: api/prog/prog.proto
 
 package api
 
@@ -25,6 +29,11 @@ type ProgressiveDeliveryServiceClient interface {
 	//
 	// GetCanary returns a Canary object.
 	GetCanary(ctx context.Context, in *GetCanaryRequest, opts ...grpc.CallOption) (*GetCanaryResponse, error)
+	//
+	// IsFlaggerAvailable returns with a hashmap where the keys are the names of
+	// the clusters, and the value is a boolean indicating whether Flagger is
+	// installed or not on that cluster.
+	IsFlaggerAvailable(ctx context.Context, in *IsFlaggerAvailableRequest, opts ...grpc.CallOption) (*IsFlaggerAvailableResponse, error)
 }
 
 type progressiveDeliveryServiceClient struct {
@@ -62,6 +71,15 @@ func (c *progressiveDeliveryServiceClient) GetCanary(ctx context.Context, in *Ge
 	return out, nil
 }
 
+func (c *progressiveDeliveryServiceClient) IsFlaggerAvailable(ctx context.Context, in *IsFlaggerAvailableRequest, opts ...grpc.CallOption) (*IsFlaggerAvailableResponse, error) {
+	out := new(IsFlaggerAvailableResponse)
+	err := c.cc.Invoke(ctx, "/ProgressiveDeliveryService/IsFlaggerAvailable", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ProgressiveDeliveryServiceServer is the server API for ProgressiveDeliveryService service.
 // All implementations must embed UnimplementedProgressiveDeliveryServiceServer
 // for forward compatibility
@@ -73,6 +91,11 @@ type ProgressiveDeliveryServiceServer interface {
 	//
 	// GetCanary returns a Canary object.
 	GetCanary(context.Context, *GetCanaryRequest) (*GetCanaryResponse, error)
+	//
+	// IsFlaggerAvailable returns with a hashmap where the keys are the names of
+	// the clusters, and the value is a boolean indicating whether Flagger is
+	// installed or not on that cluster.
+	IsFlaggerAvailable(context.Context, *IsFlaggerAvailableRequest) (*IsFlaggerAvailableResponse, error)
 	mustEmbedUnimplementedProgressiveDeliveryServiceServer()
 }
 
@@ -88,6 +111,9 @@ func (UnimplementedProgressiveDeliveryServiceServer) ListCanaries(context.Contex
 }
 func (UnimplementedProgressiveDeliveryServiceServer) GetCanary(context.Context, *GetCanaryRequest) (*GetCanaryResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetCanary not implemented")
+}
+func (UnimplementedProgressiveDeliveryServiceServer) IsFlaggerAvailable(context.Context, *IsFlaggerAvailableRequest) (*IsFlaggerAvailableResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method IsFlaggerAvailable not implemented")
 }
 func (UnimplementedProgressiveDeliveryServiceServer) mustEmbedUnimplementedProgressiveDeliveryServiceServer() {
 }
@@ -157,6 +183,24 @@ func _ProgressiveDeliveryService_GetCanary_Handler(srv interface{}, ctx context.
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ProgressiveDeliveryService_IsFlaggerAvailable_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(IsFlaggerAvailableRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProgressiveDeliveryServiceServer).IsFlaggerAvailable(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/ProgressiveDeliveryService/IsFlaggerAvailable",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProgressiveDeliveryServiceServer).IsFlaggerAvailable(ctx, req.(*IsFlaggerAvailableRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ProgressiveDeliveryService_ServiceDesc is the grpc.ServiceDesc for ProgressiveDeliveryService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -175,6 +219,10 @@ var ProgressiveDeliveryService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetCanary",
 			Handler:    _ProgressiveDeliveryService_GetCanary_Handler,
+		},
+		{
+			MethodName: "IsFlaggerAvailable",
+			Handler:    _ProgressiveDeliveryService_IsFlaggerAvailable_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
